# capability-retention-in-continual-rl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.claude/: settings.json
abstract_gradient_training/: configuration.py  gradient_accumulation.py  interval_arithmetic.py  model_utils.py  privacy.py  privacy_utils.py  test_metrics.py
certified_continual_learning/: __init__.py  models.py  regulariser.py  wandb_configs.py
configs/: AGEMTrainer.py  BufferTrainer.py  FisherBufferTrainer.py  IntervalTrainer.py  __init__.py
experiments/: final_clean_script.py
notebooks/: _rl_test.ipynb  agem_trainer.ipynb  buffer_trainer.ipynb  cifar10_resnet_all.ipynb  cifar_buffer.ipynb  ewc_trainer.ipynb  fisher_trainer.ipynb  intercontinet.ipynb  intercontinet_trainer.ipynb  interval_trainer.ipynb  lid_biasing_plots.ipynb  llm_finetuning.ipynb  lwf_trainer.ipynb  plot_buffer_results.ipynb  plot_cifar_results.ipynb  plot_llm_experiments.ipynb  plot_llm_experiments2.ipynb  plot_llm_experiments_combined.ipynb  plot_llm_experiments_multilang.ipynb  plot_mnist_results.ipynb  si_trainer.ipynb  simple_traininer.ipynb  smooth_trainer_LORA.ipynb  toy_cl_scenarios.ipynb  toy_cl_scenarios_cil.ipynb
projects/: README.md  __init__.py
scripts/: mnist_buffer_run.py  run_mnist_cil.py  run_mnist_dil.py  run_mnist_til.py
src/: IntervalTensor.py  data_utils.py  interval_utils.py  models.py  plotting_style.py  tuning_main.py  utils.py  wandb_configs.py
tutorials/: cartpole_verification.ipynb  (+9 more)
(+1688 files in other folders)
